<resources>
    <string name="app_name">RutaPlus</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_service">Agendar nuevo servicio</string>
    <string name="title_activity_car_list">Mis Vehículos</string>
    <string name="title_activity_splash_screen">Ruta plus</string>
    <string name="title_activity_profile_user">Completa tu perfil</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="title_activity_service_list">Mis Servicios</string>
    <string name="title_activity_place_list">Mis Lugares Frecuentes</string>
    <string name="title_defer_service">Aplazar Servicio</string>
    <string name="title_activity_service_detail">Detalle del servicio</string>
    <string name="title_activity_create_new_account">Registro</string>
    <string name="title_activity_login">Inicia Sesión</string>
    <string name="title_service_rating">Calificar Servicio</string>
    <string name="title_activity_add_card">Agregar Medio de Pago</string>
    <string name="title_activity_change_password">Cambia tu contraseña</string>
    <string name="create_new_car">Agregar Vehículo</string>
    <string name="create_update_car">Modificar Vehículo</string>
    <string name="my_places">Mis Lugares recientes</string>
    <string name="my_destination">Mis Destinos recientes</string>
    <string name="plus_generic_error">Inicio de sesíon con Google no esta disponible.</string>
    <string name="location_service_error">Tus servicios de ubicación actual, no estan habilitados en tu móvil.</string>
    <string name="success_register_user">Tu registro se ha creado correctamente.</string>
    <string name="failed_register_user_gplus">Tu solicitud de registro con Google no pudo ser procesada.</string>
    <string name="greeting_profile_complete">Hola %1$s tan solo danos estos datos para completar tu perfil.</string>
    <string name="failed_add_car">Tu vehículo no pudo ser agregado a la lista, intentalo luego.</string>
    <string name="success_add_car">Tu vehículo fue guardado exitosamente.</string>
    <string name="success_edit_car">Tu vehículo fue modificado exitosamente.</string>
    <string name="failed_edit_car">Tu vehículo no pudo ser modificado, intentalo luego.</string>
    <string name="failed_find_my_places">Tus lugares no se pudieron recuperar, intentalo luego.</string>
    <string name="failed_find_my_destination">Tus Destinos no se pudieron recuperar, intentalo luego.</string>
    <string name="empty_my_places">Aún no tienes lugares recientes.</string>
    <string name="success_add_service">Tu servicio fue enviado exitosamente.</string>
    <string name="failed_delete_car">Tu vehículo no pudo ser borrado, intentalo luego.</string>
    <string name="success_delete_car">Tu vehículo fue borrado.</string>
    <string name="dialog_message_defer">¿Cuanto tiempo deseas aplazar tu servicio?</string>
    <string name="failed_add_service">Hubo un problema de conexión y tu servicio no pudo ser enviado. Intentalo luego.</string>
    <string name="failed_defer_service">Tu servicio no pudo ser aplazado.</string>
    <string name="success_defer_service">Tu servicio ha sido aplazado exitosamente.</string>
    <string name="timeout_defer_service">El tiempo limite para aplazar tu servicio ha culminado.</string>
    <string name="failed_cancel_service">Tu servicio No pudo ser cancelado. Intenta nuevamente</string>
    <string name="success_cancel_service">Tu servicio ha sido cancelado exitosamente.</string>
    <string name="msg_cancel_service">La cancelación de este servicio puede incurrir en cargos a tu tarjeta de crédito. ¿Deseas cancelar el servicio?</string>
    <string name="msg_waiting_cancel_service">Cancelando servicio&#8230;</string>
    <string name="failed_validate_datetime_service">Tu servicio se debe pedir mínimo con una hora de anticipación.</string>
    <string name="failed_validate_car_service">Debes seleccionar un vehículo. Si no tienes uno, agrega uno nuevo con el signo más.</string>
    <string name="msg_service_no_info">No hay información disponible. Tu servicio no ha sido Aprobado.</string>
    <string name="error_invalid_password">La contraseña es demasiado corta (min 4)</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="msg_date_vip_failed">La fecha y hora de tu servicio ya paso o es demasiado cercana.</string>
    <string name="msg_no_date_selected">Debes seleccionar primero la fecha de tu servicio.</string>
    <string name="msg_empty_datetime">Debes proporcionar fecha y hora de tu servicio.</string>
    <string name="msg_empty_rates">No se han podido cargar la tarifas, verifica tu conexión a internet y pulsa el botón de refrescar tarifas.</string>
    <string name="msg_add_proccess_card">Agregando tu medio de pago</string>
    <string name="msg_connecting">Conectando&#8230;</string>
    <string name="msg_add_card_success">Medio de pago agregado exitosamente.</string>
    <string name="msg_add_card_failed">Tu medio de pago no pudo ser registrado.</string>
    <string name="msg_service_rating_failed">Tu calificación no pudo ser enviada, intentalo luego.</string>
    <string name="msg_service_rating_success">Tu calificación fue enviada exitosamente.</string>
    <string name="msg_check_terms">Debes Aceptar los terminos y condiciones.</string>
    <string name="msg_share_app">Muy util los servicios de conductor VIP que ofrece ésta App.</string>
    <string name="msg_driver_phone_not_found">Este conductor aún no tiene un número teléfonico asignado.</string>
    <string name="success_change_password">Tu contraseña fue cambiada con éxito.</string>
    <string name="failed_change_password">Tu contraseña NO pudo ser cambiada. Intenta mas tarde.</string>
    <string name="failed_remember_password">Tu solicitud no pudo ser enviada ahora. Intenta nuevamente</string>
    <string name="success_remember_password">Hemos enviado un email a esta dirección de correo, revisalo.</string>
    <string name="msg_user_not_exists">Este usuario no existe en nuestra base de datos.</string>
    <string name="msg_no_add_payment">No por ahora, Cerrar mi sesión</string>
    <string name="url_add_user_service">http://rutaplus.com.co/add_clientejson/</string>
    <string name="url_login_user_service">http://rutaplus.com.co/loginjson/</string>
    <string name="url_add_car_service">http://rutaplus.com.co/add_vehiculo/</string>
    <string name="url_list_cars">http://rutaplus.com.co/find_vehiculo/</string>
    <string name="url_check_post">http://rutaplus.com.co/deldarwin/</string>
    <string name="url_add_service">http://rutaplus.com.co/add_servicio/</string>
    <string name="url_delete_car">http://rutaplus.com.co/delete_vehiculo/</string>
    <string name="url_list_service">http://rutaplus.com.co/find_servicios/</string>
    <string name="url_list_places">http://rutaplus.com.co/find_lugares/</string>
    <string name="url_defer_service">http://rutaplus.com.co/editar_servicio/</string>
    <string name="url_cancel_service">http://rutaplus.com.co/cancel_serviciovip/</string>
    <string name="url_get_rates">http://rutaplus.com.co/find_tarifas/</string>
    <string name="url_add_service_vip">http://rutaplus.com.co/add_serviciovip/</string>
    <string name="url_list_destination">http://rutaplus.com.co/find_destinos/</string>
    <string name="url_service_rating">http://rutaplus.com.co/add_calificacion/</string>
    <string name="url_terms">http://www.rutaplus.net/terminoscondiciones/</string>
    <string name="url_base">http://www.rutaplus.net</string>
    <string name="url_change_password">http://rutaplus.com.co/cambiarclave/</string>
    <string name="url_remember_password">http://www.rutaplus.co/forgotpass/</string>
    <string name="url_get_all_rates">http://rutaplus.com.co/find_tarifasall/</string>
    <string name="lbl_create_new_account">Crear Cuenta</string>
    <string name="lbl_send_address">Enviar dirección</string>
    <string name="lbl_address">Dirección de recogida</string>
    <string name="lbl_pickup_address">Dirección de recogida</string>
    <string name="lbl_pickup_date_time">Hora de recogida</string>
    <string name="lbl_address_destination">Dirección de destino</string>
    <string name="lbl_place">Lugar</string>
    <string name="lbl_pickup_date">Fecha</string>
    <string name="lbl_pickup_time">Hora</string>
    <string name="lbl_car">Vehiculo</string>
    <string name="lbl_login">Iniciar Sesión</string>
    <string name="lbl_name">Nombre</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_cc">No. Documento de identidad</string>
    <string name="lbl_phone">Celular</string>
    <string name="lbl_pswrd">Contraseña</string>
    <string name="lbl_alias">alias : pichirilo</string>
    <string name="lbl_plate">placa : ABC123</string>
    <string name="lbl_brand">Marca : Renault</string>
    <string name="lbl_line">Línea : twingo</string>
    <string name="lbl_color">Color : negro</string>
    <string name="lbl_save">Guardar</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="lbl_delete">Eliminar</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_defer">Aplazar</string>
    <string name="lbl_next">Siguiente</string>
    <string name="lbl_add">Agregar</string>
    <string name="action_sign_in_register">Registrarme</string>
    <string name="action_profile_complete">Guardar</string>
    <string name="action_sign_in_short">Registrarme</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_forgot_password">Recordar Contraseña</string>
    <string name="lbl_forgot">Recordar</string>
    <string name="login_progress_signing_in">Enviando datos&#8230;</string>
    <string name="find_progress">Consultando&#8230;</string>
    <string name="error_invalid_email">La dirección de email es incorrecta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="lbl_favorite_places">Mis Lugares</string>
    <string name="lbl_vip">VIP Car</string>
    <string name="lbl_elected">VIP Van</string>
    <string name="lbl_university">VIP U</string>
    <string name="lbl_inmediate">Hora de recogida</string>
    <string name="lbl_immediate_service">Ahora</string>
    <string name="lbl_reserved_service">Reservar</string>
    <string name="lbl_get_rates">Refrescar tarifas</string>
    <string name="lbl_service_detail">Detalles del servicio</string>
    <string name="lbl_status">Estado</string>
    <string name="lbl_comment">Comentario</string>
    <string name="lbl_rating">Calificar</string>
    <string name="lbl_login_short">Login</string>
    <string name="lbl_terms"><u>Aceptas los terminos y condiciones</u></string>
    <string name="lbl_yes">Si</string>
    <string name="lbl_no">No</string>
    <string name="lbl_share">Compartir</string>
    <string name="lbl_new_password">Nueva Contraseña</string>
    <string name="lbl_new_password_confirm">Repetir Nueva Contraseña</string>
    <string name="lbl_change_pasword">Cambiar Contraseña</string>
    <string name="lbl_rate_service">CALIFICAR SERVICIO</string>
    <string name="lbl_cancel_service">Cancelar Servicio</string>
    <string name="lbl_call_driver">LLamar conductor</string>
    <string name="lbl_vip_driver">Conductor VIP</string>
    <string name="plate">Placa</string>
    <string name="driver_assign">Conductor Asignado</string>
    <string name="try_again_later">Inténtalo má tarde</string>
    <string name="not_drivers_available">No hay conductores disponibles</string>
    <string name="prompt_email">ejemplo@gmail.com</string>
    <string name="prompt_password">contraseña</string>
    <string name="drawer_open">Abrir barra de navegación</string>
    <string name="drawer_close">Cerrar barra de navegación</string>
</resources>