<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    tools:context=".CreateNewAccountActivity" >
	

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <!--NOMBRE-->
            
            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/lbl_name"
                style="@style/txt_form" />
            
            <!--EMAIL-->
           

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/lbl_email"
                style="@style/txt_form" />
            
            <!--CEDULA-->
            

            <EditText
                android:id="@+id/txt_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/lbl_cc"
                style="@style/txt_form" />
            
            <!--PHONE-->
            

            <EditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/lbl_phone"
                style="@style/txt_form" />
            
            <!--PASSWORD-->
            
            <EditText
                android:id="@+id/txt_pswrd"
                style="@style/txt_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_pswrd"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:weightSum="4">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:gravity="left"
                    android:onClick="showTerms"
                    android:text="@string/lbl_terms"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ToggleButton
                    android:id="@+id/tgl_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOn="@string/lbl_yes"
                    android:textOff="@string/lbl_no" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_sign_in_register" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
