<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_rutaplus"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GoogleSignInActivity"
    tools:ignore="ContentDescription" >

    <ImageView
        android:id="@+id/img_logo_gplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button_google"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" >
    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_new_account"
        android:layout_centerHorizontal="true"
        android:onClick="launchLoginAtivity"
        android:text="@string/lbl_login" />

    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo_gplus"
        android:layout_centerHorizontal="true"
        android:onClick="createNewAccount"
        android:text="@string/lbl_create_new_account" />

    <TextView
        android:id="@+id/btn_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:onClick="launchRememberPassword"
        android:paddingTop="16dp"
        android:text="@string/action_forgot_password"
        android:clickable="true" />

    <!--
         <TextView
        android:id="@+id/lbl_sign_in_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    -->

    <ProgressBar
        android:id="@+id/progress_bar_gplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button_google"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</RelativeLayout>