<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/verde_rutaplus"
    tools:context="com.acktos.rutaplus.WaitingDriverProgressActivity">

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="fill_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <com.acktos.rutaplus.util.HoloCircularProgressBar
            android:id="@+id/holoCircularProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:marker_progress="0"
            app:progress="0"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/counting"
            android:layout_gravity="center_vertical"
            android:textSize="32dp"
            android:textIsSelectable="false"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/driver_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="#ffffff"
        android:layout_below="@+id/progress_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_elected"
            android:id="@+id/box_service_type"
            android:background="#555555"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/box_driver_photo"
            android:layout_below="@+id/box_service_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textStyle="bold"
            android:id="@+id/box_driver_name"
            android:layout_below="@+id/box_service_type"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/box_driver_photo"
            android:layout_toEndOf="@+id/box_driver_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_plate"
            android:id="@+id/box_driver_plate"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/box_driver_photo"
            android:layout_toEndOf="@+id/box_driver_photo"
            android:layout_below="@+id/box_driver_name"
            />
    </RelativeLayout>



</RelativeLayout>
